added brading page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>branding_page_showcasing_fashion_brand's_visual_identity</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Margarine&family=Parkinsans:wght@300..800&family=Protest+Revolution&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
+
 <body>
-    <!-- Prompt 15  –  11/12//24
-Daily Promts:
-
-Build a branding page showcasing a fashion brand's visual identity
- -->
-
+    <!-- Prompt 15 -->
+    <main>
+        <nav>
+            <div class="logo">
+                <h2>ZARA.</h2>
+            </div>
+            <div class="nav_options">
+                <h4>New & Featured</h4>
+                <h4>Woman</h4>
+                <h4>man</h4>
+                <h4>Kids</h4>
+                <h4>Beauty</h4>
+                <i class="ri-menu-3-fill"></i>
+            </div>
+            <div class="info">
+                <form action="">
+                    <i class="ri-search-line"></i><input type="text" placeholder="Search">
+                </form>
+                <i class="ri-user-line"></i>
+                <i class="ri-heart-line"></i>
+                <i class="ri-shopping-bag-4-line"></i>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="left">
+                <h1>For this <span>Summer</span></h1>
+                <h4>Sale up to 70% off</h4>
+                <p>It quickly expanded internationally, becoming part of the Inditex Group, the world's largest fashion retailer. Known for its agility and innovation, Zara now focuses on sustainability with initiatives like eco-friendly materials and a commitment to net-zero emissions by 2040.</p>
+                <button>Shop Now</button>
+            </div>
+            <div class="right">
+                <img src="https://purepng.com/public/uploads/large/purepng.com-fashion-girlwomenpeoplepersonsfemalefashion-1121525113581cm2t9.png" alt="">
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
